@@ -1,6 +1,7 @@
-2011-11-08  Alexander V. Lukyanov <lav@yars.free.net>
+2011-11-09  Alexander V. Lukyanov <lav@yars.free.net>
 
 	* Http.cc: fixed NULL-crash on ssl.
+	* lftp.cc: (attach) check process existence; remove stale sockets.
 
 2011-10-06  Alexander V. Lukyanov <lav@yars.free.net>
 
